# tinkoff_testing_2022_7

./: CMakeLists.txt  README.md  task2.cpp  task3.cpp
tasks/: task1.cpp  task4.cpp  task5.cpp  task7.cpp
