cmake_minimum_required(VERSION 3.21)
project(test_rep)

set(CMAKE_CXX_STANDARD 14)

add_executable(task1 tasks/task1.cpp)
add_executable(task2 tasks/task2.cpp)
add_executable(task3 tasks/task3.cpp)
add_executable(task4 tasks/task4.cpp)
add_executable(task5 tasks/task5.cpp)
add_executable(task7 tasks/task7.cpp)
